--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8026
+  port: 8077
 
 spring:
   application:
@@ -8,17 +8,22 @@ spring:
   # ???????
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/smscode
+    url: jdbc:mysql://127.0.0.1:3306/qq
     username: root
     password: 123456789
     hikari:
-      minimum-idle: 5
-      maximum-pool-size: 20
+      minimum-idle: 50
+      maximum-pool-size: 150
       auto-commit: true
       idle-timeout: 30000
       pool-name: MyHikariCP
       max-lifetime: 1800000
       connection-timeout: 30000
+      data-source-properties:
+        cachePrepStmts: true
+        prepStmtCacheSize: 500
+        prepStmtCacheSqlLimit: 2048
+        useServerPrepStmts: true
 
   # Jackson ??????????? Fastjson2?? SpringBoot ????????? Jackson?
   jackson:
